<resources>
    <string name="app_name">you-portfolio-mobile</string>
    <string name="app_name_ui">Your Portfolio</string>
    <string name="id_hint">이메일</string>
    <string name="password_hint">비밀번호</string>
    <string name="sign_up">가입하기</string>
    <string name="login">로그인</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>